--- a/app/src/main/res/layout/content_entrega_retiro_envases_patrocinio.xml
+++ b/app/src/main/res/layout/content_entrega_retiro_envases_patrocinio.xml
@@ -54,6 +54,7 @@
                     android:orientation="horizontal">
 
 
+
                     <TextView
                         android:id="@+id/vuelta_erep"
                         android:layout_width="match_parent"
@@ -63,7 +64,7 @@
                         android:layout_marginRight="2dp"
                         android:background="#ef6c00"
                         android:gravity="bottom|center"
-                        android:text="Vuelta N°:"
+                        android:text="Vuelta N° "
                         android:textColor="@android:color/background_light"
                         android:textSize="24sp" />
 
@@ -186,6 +187,10 @@
                         </Spinner>
 
 
+
+
+
+
                         <EditText
 
                             android:layout_weight="1"
@@ -198,6 +203,10 @@
                             android:inputType="number" />
 
 
+
+
+
+
                         <EditText
 
                             android:layout_weight="1"
@@ -208,6 +217,8 @@
                             android:hint="Cantidad"
                             android:imeOptions="actionNext"
                             android:inputType="number" />
+
+
 
 
                     </LinearLayout>
