--- a/app/src/main/res/layout/activity_realizar_ventas_clientes_supervisor.xml
+++ b/app/src/main/res/layout/activity_realizar_ventas_clientes_supervisor.xml
@@ -48,7 +48,7 @@
                 android:layout_marginBottom="20dp"
                 android:background="#ff5722"
                 android:orientation="vertical"
-                android:weightSum="4">
+                android:weightSum="5">
 
 
                 <LinearLayout
@@ -66,14 +66,14 @@
                         android:id="@+id/img_cliente_supervisor"
                         android:layout_width="match_parent"
                         android:layout_height="100dp"
-                        android:src="@mipmap/ic_img_cliente_round" />
+                        android:src="@mipmap/img_cliente_realizar_venta_repartidor" />
 
                 </LinearLayout>
 
 
                 <LinearLayout
 
-                    android:id="@+id/llh_nombre_apellido_ventas_supervisor"
+                    android:id="@+id/llh_apellido_ventas_supervisor"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -85,7 +85,7 @@
                         android:id="@+id/nombre_apellido_cliente_realizar_ventas_supervisor"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:text="NOMBRE Y APELLIDO"
+                        android:text="APELLIDO"
                         android:textAlignment="center"
                         android:textColor="#FFFF"
                         android:textSize="25sp"
@@ -93,6 +93,31 @@
 
                 </LinearLayout>
 
+
+                <LinearLayout
+
+                    android:id="@+id/llh_nombre_ventas"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+
+
+
+                    <TextView
+
+                        android:id="@+id/nombre_cliente_realizar_ventas"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="left"
+                        android:text="NOMBRE"
+                        android:textAlignment="center"
+                        android:textColor="#FFFF"
+                        android:textSize="25sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
 
                 <LinearLayout
 
@@ -240,7 +265,6 @@
                     android:id="@+id/llh_importe_entrega_ventas_supervisor"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="#ff5722"
                     android:orientation="horizontal"
                     android:weightSum="3">
 
@@ -258,6 +282,8 @@
                         android:textStyle="bold" />
 
 
+
+
                     <ImageButton
 
                         android:id="@+id/img_button_confirmar_ventas_supervisor"
@@ -267,6 +293,7 @@
                         android:layout_weight="1"
                         android:background="@mipmap/contenedor_checkbox"
                         android:src="@drawable/ic_check_rojo" />
+
 
 
                     <TextView
