--- a/app/src/main/res/layout/nueva_tanda.xml
+++ b/app/src/main/res/layout/nueva_tanda.xml
@@ -1,27 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
 
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
 
-    android:id="@+id/scroll_parent"
+    android:id="@+id/parent_layout_vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".Cargas_Descargas"
-    tools:showIn="@layout/activity_cargas_descargas">
-
-        -->
-
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
-        android:id="@+id/parent_layout_vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
 
         <LinearLayout
@@ -45,25 +31,29 @@
             <!--#################################################-->
 
 
-            <LinearLayout
+                <LinearLayout
 
-                android:id="@+id/layout_horizontal_primer_tupla"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#dd2c00"
-                android:orientation="horizontal">
-
-
-                <TextView
-                    android:id="@+id/tandas"
+                    android:id="@+id/layout_horizontal_primer_tupla"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="bottom|center"
-                    android:text="Tanda N°:"
-                    android:textColor="@android:color/background_light"
-                    android:textSize="24sp" />
+                    android:orientation="horizontal">
 
-            </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/tandas"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="2dp"
+                        android:layout_marginTop="2dp"
+                        android:layout_marginRight="2dp"
+                        android:background="#ff3d00"
+                        android:gravity="bottom|center"
+                        android:text="Tanda N° "
+                        android:textColor="@android:color/background_light"
+                        android:textSize="24sp" />
+
+
+                </LinearLayout>
 
 
 
@@ -71,62 +61,73 @@
             <!--#################################################-->
 
 
-            <LinearLayout
-                android:id="@+id/layout_horizontal_segunda_tupla"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#ff5722"
-                android:orientation="horizontal"
-                android:weightSum="2">
-
-
-                <TextView
-
-                    android:id="@+id/articulos"
-                    android:layout_width="155dp"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="Artículos"
-                    android:textColor="#FFFF"
-                    android:textSize="15sp" />
-
-
-                <ImageView
-
-                    android:id="@+id/img_carga"
-                    android:layout_width="30dp"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_carga" />
-
-                <TextView
-                    android:id="@+id/cargas"
+                <LinearLayout
+                    android:id="@+id/layout_horizontal_segunda_tupla"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center|left"
-                    android:text="Carga"
-                    android:textColor="#FFFF"
-                    android:textSize="15sp" />
+                    android:orientation="horizontal"
+                    android:layout_marginLeft="2dp"
+                    android:layout_marginRight="2dp"
+                    android:background="#ff6d00"
+                    tools:visibility="visible"
+                    android:weightSum="1">
 
 
-                <ImageView
 
-                    android:id="@+id/img_descarga"
-                    android:layout_width="30dp"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_descarga" />
+                    <TextView
 
-                <TextView
-                    android:id="@+id/descargas"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="left"
-                    android:text="Descarga"
-                    android:textColor="#FFFF"
-                    android:textSize="15sp" />
+                        android:id="@+id/articulos"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="Artículos"
+                        android:textColor="#FFFF"
+                        android:textSize="20sp" />
 
-            </LinearLayout>
+
+
+
+
+                    <ImageView
+
+                        android:id="@+id/img_carga"
+                        android:layout_width="30dp"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_carga" />
+
+
+                    <TextView
+
+                        android:id="@+id/tv_carga"
+                        android:layout_width="60dp"
+                        android:layout_height="wrap_content"
+                        android:gravity="center|left"
+                        android:text="Carga"
+                        android:textColor="#FFFF"
+                        android:textSize="20sp" />
+
+
+                    <ImageView
+
+                        android:id="@+id/img_descarga"
+                        android:layout_width="30dp"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_descarga" />
+
+
+                    <TextView
+
+                        android:layout_weight="1"
+                        android:id="@+id/tv_descarga"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="left"
+                        android:text="Descarga"
+                        android:textColor="#FFFF"
+                        android:textSize="20sp" />
+
+
+                </LinearLayout>
 
 
 
@@ -147,23 +148,27 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal"
-                    android:weightSum="1">
+                    android:layout_marginTop="10dp"
+                    android:weightSum="2">
 
                     <ImageButton
 
                         android:id="@+id/add_art"
-                        android:layout_width="40dp"
+                        android:layout_width="30dp"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center"
                         android:background="@android:color/transparent"
                         android:src="@drawable/ic_add_new_art" />
 
                     <Spinner
 
                         android:id="@+id/sp_art"
-                        android:layout_width="match_parent"
+                        style="@style/Widget.AppCompat.Spinner.DropDown"
+                        android:layout_width="155dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:dropDownWidth="wrap_content"
                         android:gravity="center"
+                        android:popupElevation="16dp"
                         android:prompt="@string/title_spinner"
                         android:spinnerMode="dialog">
 
@@ -173,24 +178,25 @@
                     <EditText
 
                         android:id="@+id/edtx_carga"
-                        android:layout_width="95dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:gravity="center"
                         android:hint="Cantidad"
                         android:imeOptions="actionNext"
                         android:inputType="number" />
+
 
                     <EditText
 
+                        android:layout_weight="1"
                         android:id="@+id/edtx_descarga"
-                        android:layout_width="95dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:hint="Cantidad"
                         android:imeOptions="actionNext"
-                        android:inputType="number" />
-
-                    <!--android:focusableInTouchMode="true"-->
+                        android:inputType="number"/>
 
 
                 </LinearLayout>
@@ -202,47 +208,52 @@
             <!--#######################################################################-->
 
 
-            <LinearLayout
+                <LinearLayout
 
-                android:id="@+id/layout_horizontal_cuarta_tupla"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="2">
-
-
-                <ImageView
-
-                    android:id="@+id/img_money"
-                    android:layout_width="165dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:src="@drawable/ic_money" />
-
-                <EditText
-
-                    android:id="@+id/edtx_carga_money"
+                    android:id="@+id/layout_horizontal_cuarta_tupla"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:hint="$"
-                    android:imeOptions="actionNext"
-                    android:inputType="number" />
+                    android:layout_height="70dp"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="20dp"
+                    android:weightSum="2">
 
-                <EditText
 
-                    android:id="@+id/edtx_descarga_money"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:hint="$"
-                    android:imeOptions="actionPrevious"
-                    android:inputType="number" />
+                    <ImageView
 
-            </LinearLayout>
+                        android:id="@+id/img_money"
+                        android:layout_width="165dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:src="@mipmap/dinero" />
 
+
+
+                    <EditText
+
+                        android:id="@+id/edtx_carga_money"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:hint="$"
+                        android:imeOptions="actionNext"
+                        android:inputType="number" />
+
+
+                    <EditText
+
+                        android:id="@+id/edtx_descarga_money"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:hint="$"
+                        android:imeOptions="actionDone"
+                        android:inputType="number" />
+
+
+
+                </LinearLayout>
 
 
             </LinearLayout> <!--Fin del llv_contenedor_para_bordes-->
