--- a/app/src/main/res/layout/activity_opciones_estadisticas.xml
+++ b/app/src/main/res/layout/activity_opciones_estadisticas.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
 
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginLeft="10dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginBottom="10dp"
     android:orientation="vertical"
+    android:weightSum="2"
+
+
     tools:context=".OpcionesEstadisticas">
 
 
@@ -20,38 +28,222 @@
         app:popupTheme="@style/AppTheme.PopupOverlay" />
 
 
+    <LinearLayout
+
+        android:layout_weight="1"
+        android:id="@+id/llh_1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
+
+
+
+
+
+        <LinearLayout
+
+            android:layout_weight="1"
+            android:id="@+id/llv_uno_punto_uno"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:weightSum="2"
+            android:orientation="vertical">
+
+
+            <ImageButton
+                android:id="@+id/img_btn_comisiones"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:background="#ff3d00"
+                android:src="@mipmap/chanchito_comisiones_128px"
+                android:layout_weight="1"/>
+
+
+            <TextView
+
+                android:id="@+id/main_tv_comisiones"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:background="#ff3d00"
+                android:gravity="center|top"
+                android:text="COMISIONES"
+                android:textColor="#FFFF"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+
+        </LinearLayout>
+
+
+
+
+        <LinearLayout
+
+            android:layout_weight="1"
+            android:id="@+id/llv_uno_punto_dos"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:weightSum="2"
+            android:orientation="vertical">
+
+
+            <ImageButton
+                android:id="@+id/img_btn_combustible"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="#ff3d00"
+                android:src="@mipmap/gasolinera_estadisticas_128px" />
+
+
+            <TextView
+
+                android:id="@+id/main_tv_combustible"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#ff3d00"
+                android:gravity="center|top"
+                android:text="GASTO EN COMBUSTIBLE"
+                android:textColor="#FFFF"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                android:layout_weight="1"/>
+
+        </LinearLayout>
+
+
+
+
+    </LinearLayout>
+
+
+
+
+    <!--#################################################################-->
+
 
 
 
 
     <LinearLayout
 
-        android:id="@+id/llv_padre_estadisticas_opciones"
+        android:layout_weight="1"
+        android:id="@+id/llh_2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/btn_comisiones"
+
+
+
+
+        <LinearLayout
+
+            android:layout_weight="1"
+            android:id="@+id/llv_dos_punto_uno"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#d50000"
-            android:text="COMISIONES"
-            android:textColor="#FFFFFF" />
+            android:layout_height="match_parent"
+            android:weightSum="2"
+            android:orientation="vertical">
 
 
 
-        <Button
-            android:id="@+id/btn_combustible"
+            <ImageButton
+                android:id="@+id/img_btn_venta_bidones"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:background="#ff3d00"
+                android:src="@mipmap/bidon_azul_128px">
+
+            </ImageButton>
+
+            <TextView
+
+                android:id="@+id/main_tv_venta_bidones"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_marginRight="10dp"
+                android:background="#ff3d00"
+                android:gravity="center|top"
+                android:text="VENTA DE BIDONES"
+                android:textColor="#FFFF"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+
+        </LinearLayout>
+
+
+        <LinearLayout
+
+            android:layout_weight="1"
+            android:id="@+id/llv_dos_punto_dos"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#d50000"
-            android:text="GASTO EN COMBUSTIBLE"
-            android:textColor="#FFFFFF" />
+            android:layout_height="match_parent"
+            android:weightSum="2"
+            android:orientation="vertical">
+
+
+            <ImageButton
+                android:id="@+id/img_btn_frecuencia_llamadas_clientes"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="#ff3d00"
+                android:src="@drawable/ic_main_mapa">
+
+            </ImageButton>
+
+
+            <TextView
+
+                android:id="@+id/main_tv_frecuencia_llamadas_clientes"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="#ff3d00"
+                android:gravity="center|top"
+                android:text="FRECUENCIA DE LLAMADAS DE CLIENTES"
+                android:textColor="#FFFF"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+
+        </LinearLayout>
+
 
 
 
     </LinearLayout>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 </LinearLayout>
