--- a/app/src/main/res/menu/menu_filtro_vb.xml
+++ b/app/src/main/res/menu/menu_filtro_vb.xml
@@ -4,23 +4,24 @@
 
 
     <item
-        android:id="@+id/action_gasto_combustible_por_mes"
+        android:id="@+id/action_venta_bidones_por_mes"
         android:orderInCategory="100"
-        android:title="@string/action_gc_mes"
+        android:title="@string/action_vb_mes"
         app:showAsAction="never" />
 
     <item
-        android:id="@+id/action_gasto_combustible_por_seis_meses"
+        android:id="@+id/action_venta_bidones_por_seis_meses"
         android:orderInCategory="100"
-        android:title="@string/action_gc_seis_meses"
+        android:title="@string/action_vb_seis_meses"
         app:showAsAction="never" />
 
 
     <item
-        android:id="@+id/action_gasto_combustible_por_anio"
+        android:id="@+id/action_venta_bidones_por_anio"
         android:orderInCategory="100"
-        android:title="@string/action_gc_anio"
+        android:title="@string/action_vb_anio"
         app:showAsAction="never" />
+
 
 
 </menu>
