--- a/app/src/main/res/layout/item_evento.xml
+++ b/app/src/main/res/layout/item_evento.xml
@@ -24,7 +24,7 @@
 
         <LinearLayout
 
-            android:id="@+id/linear_layout_vertical_hijo"
+            android:id="@+id/linear_layout_vertical_padre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -50,6 +50,8 @@
 
 
                 <View
+
+                    android:id="@+id/view_estado_evento"
                     android:layout_width="10dp"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="10dp"
@@ -72,6 +74,8 @@
 
 
                     <TextView
+
+                        android:id="@+id/tv_nombre_evento_recibir"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
@@ -88,6 +92,8 @@
 
 
                     <TextView
+
+                        android:id="@+id/tv_nombre_apellido_responsable_recibir"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
@@ -116,6 +122,7 @@
 
                         <TextView
 
+                            android:id="@+id/tv_fecha_inicio_recibir"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -128,6 +135,7 @@
 
                         <TextView
 
+                            android:id="@+id/tv_valor_fecha_inicio_recibir"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -153,6 +161,7 @@
 
                         <TextView
 
+                            android:id="@+id/tv_fecha_fin_recibir"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -165,6 +174,7 @@
 
                         <TextView
 
+                            android:id="@+id/tv_valor_fecha_fin_recibir"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
